--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "mysql2": "^1.6.5",
     "sequelize": "^5.9.1",
     "sequelize-cli": "^5.5.0"
   }
